--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -29,4 +29,6 @@
     <string name="nav_header_title">Foodplan Lüneburg</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="logout">Logout</string>
+    <string name="logout_successfull">Logout Successfull</string>
 </resources>
