Foodplan mit Dummy Foods

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -28,4 +28,9 @@
     <string name="txt_food_name">Name</string>
     <string name="txt_food_price">Preis</string>
     <string name="txt_food_type">Type</string>
+    <string name="txt_monday">Montag</string>
+    <string name="txt_tuesday">Dienstag</string>
+    <string name="txt_wednesday">Mittwoch</string>
+    <string name="txt_thursday">Donnerstag</string>
+    <string name="txt_friday">Freitag</string>
 </resources>
