--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -29,6 +29,19 @@
     <string name="nav_header_title">Foodplan Lüneburg</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
+
     <string name="logout">Logout</string>
     <string name="logout_successfull">Logout Successfull</string>
+
+
+    <string name="txt_monday">Monday</string>
+    <string name="txt_tuesday">Tuesday</string>
+    <string name="txt_wednesday">Wednesday</string>
+    <string name="txt_thursday">Thursday</string>
+    <string name="txt_friday">Friday</string>
+
+    <string name="button_addToFoodplan">Add to foodplan</string>
+    <string name="button_backtofoodplan">Back to Foodplan</string>
+    <string name="button_deletefromfoodplan">Delete form Foodplan</string>
+
 </resources>
