--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,19 @@
 
     <string name="button_save">Save</string>
     <string name="button_delete">Delete</string>
+    <string name="button_deletefromfoodplan">Delete from Foodplan</string>
     <string name="button_back">Back</string>
+
+    <string name="button_backtofoodplan">Back to Foodplan</string>
+    <string name="button_addToFoodplan">ADD TO FOODPLAN</string>
+
     <string name="menu_gallery">Gallery</string>
     <string name="menu_home">Home</string>
+    <string name="txt_monday">Monday</string>
+    <string name="txt_tuesday">Tuesday</string>
+    <string name="txt_wednesday">Wednesday</string>
+    <string name="txt_thursday">Thursday</string>
+    <string name="txt_friday">Friday</string>
 
 
 </resources>
