--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -28,7 +28,20 @@
     <string name="txt_food_name">Name</string>
     <string name="txt_food_price">Preis</string>
     <string name="txt_food_type">Type</string>
+
     <string name="logout">Auslogen</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="logout_successfull">Erfolreich Ausgeloggt</string>
+
+
+    <string name="txt_monday">Montag</string>
+    <string name="txt_tuesday">Dienstag</string>
+    <string name="txt_wednesday">Mittwoch</string>
+    <string name="txt_thursday">Donnerstag</string>
+    <string name="txt_friday">Freitag</string>
+    <string name="button_addToFoodplan">Zum Foodplan hinzufügen</string>
+    <string name="button_backtofoodplan">Zurück zum Essensplan</string>
+    <string name="button_deletefromfoodplan">Löschen aus Foodplan</string>
+
+
 </resources>
