--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -39,5 +39,7 @@
     <string name="logout">Logout</string>
     <string name="logout_successfull">Logout Successfull</string>
     <string name="button_addToFoodplan">Add to foodplan</string>
+    <string name="button_delete_foodplan">Delete from foodplan</string>
+    <string name="button_back_foodplan">Back to foodplan</string>
 
 </resources>
