--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">foodplan</string>
+    <string name="app_name">Foodplan Lüneburg</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Foodplan Lüneburg</string>
@@ -51,10 +51,14 @@
     <string name="menu_home">Home</string>
 
     <!--Activity Main/FoodList-->
-    <string name="txt_monday">MON</string>
-    <string name="txt_tuesday">TUE</string>
-    <string name="txt_wednesday">WED</string>
-    <string name="txt_thursday">THU</string>
-    <string name="txt_friday">FRI</string>
+    <string name="txt_monday">Monday</string>
+    <string name="txt_tuesday">Tuesday</string>
+    <string name="txt_wednesday">Wednesday</string>
+    <string name="txt_thursday">Thursday</string>
+    <string name="txt_friday">Friday</string>
+    <string name="addedToFoodplan">Added to foodplan</string>
+    <string name="current_week">current Week</string>
+    <string name="next_week">next Week</string>
+    <string name="week">"Week: "</string>
 
 </resources>
